samples/_failures_safe/1761417053_38aa6a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8aa04a27.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_8aa04a27.c:156:39: error: missing terminating " character
  156 |             case TOKEN_NUMBER: printf("N
      |                                       ^~
./samples/SAFE/__tmp_8aa04a27.c:156:13: error: expected expression at end of input
  156 |             case TOKEN_NUMBER: printf("N
      |             ^~~~
./samples/SAFE/__tmp_8aa04a27.c:156:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8aa04a27.c:156:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8aa04a27.c:156:13: error: expected declaration or statement at end of input
